small fix with wrong padding in #main th
git-svn-id: file:///home/jaliste/hcvol/hcvol/trunk@2990 4f49b16c-3c57-40ef-8e22-7452baa6c33a

--- a/htdocs/styles/YAML/screen/test_matthias.css
+++ b/htdocs/styles/YAML/screen/test_matthias.css
@@ -13,8 +13,6 @@ p.highlight {
 }
 
 /* mods for tables */
-#main th {padding: 0em 0em 0em 0.5em;}
-
 #main tr.highlight {
 	background: #faf5dd url(../images/cell_bg.jpg) repeat-x;
 	border: 1px solid #e5e5e5;
